# docs/swagger.yaml
@@ -5,6 +5,13 @@ definitions:
       token:
         type: string
     type: object
+  controller.DisabilityPostParameters:
+    properties:
+      disabilities:
+        items:
+          $ref: '#/definitions/model.DisabilityRequest'
+        type: array
+    type: object
   controller.MessageResponse:
     properties:
       message:
@@ -42,6 +49,15 @@ definitions:
     - Light
     - Dark
     - System
+  model.ActivityRequest:
+    properties:
+      actor:
+        type: string
+      description:
+        type: string
+      type:
+        type: string
+    type: object
   model.AddressRequest:
     properties:
       city:
@@ -134,9 +150,11 @@ definitions:
     type: object
   model.DisabilityRequest:
     properties:
-      acquired:
-        type: boolean
-      id:
+      category:
+        type: string
+      description:
+        type: string
+      rate:
         type: integer
     type: object
   model.Field:
@@ -173,6 +191,13 @@ definitions:
       title:
         type: string
     type: object
+  model.PersonDisabilityRequest:
+    properties:
+      acquired:
+        type: boolean
+      id:
+        type: integer
+    type: object
   model.PersonDisabilityResponse:
     properties:
       acquired:
@@ -184,7 +209,7 @@ definitions:
       id:
         type: integer
       rate:
-        type: string
+        type: integer
     type: object
   model.PersonRequest:
     properties:
@@ -194,7 +219,7 @@ definitions:
         type: string
       disabilities:
         items:
-          $ref: '#/definitions/model.DisabilityRequest'
+          $ref: '#/definitions/model.PersonDisabilityRequest'
         type: array
       gender:
         $ref: '#/definitions/enum.GenderEnum'
@@ -300,6 +325,74 @@ info:
   title: CIJ Project API
   version: "1.0"
 paths:
+  /activities:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve activities filtered by type and date range
+      parameters:
+      - description: Activity Type
+        in: query
+        name: type
+        required: true
+        type: string
+      - description: Start Date
+        in: query
+        name: start_date
+        required: true
+        type: string
+      - description: End Date
+        in: query
+        name: end_date
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.Response'
+      summary: Get activities by type and period
+      tags:
+      - activities
+    post:
+      consumes:
+      - application/json
+      description: Create a new activity with the provided details
+      parameters:
+      - description: Activity Request
+        in: body
+        name: activity
+        required: true
+        schema:
+          $ref: '#/definitions/model.ActivityRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/model.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.Response'
+      summary: Create a new activity
+      tags:
+      - activities
   /companies:
     get:
       consumes:
@@ -461,6 +554,32 @@ paths:
       summary: Get user config
       tags:
       - config
+  /disabilities:
+    post:
+      consumes:
+      - application/json
+      description: Create new disabilities
+      parameters:
+      - description: List of disabilities
+        in: body
+        name: disabilities
+        required: true
+        schema:
+          $ref: '#/definitions/controller.DisabilityPostParameters'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/model.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.Response'
+      summary: Create Disabilities
+      tags:
+      - disabilities
   /get-user-data:
     post:
       consumes:
@@ -824,4 +943,52 @@ paths:
       summary: Update a person disabilities.
       tags:
       - People
+  /reports/disability-totals:
+    get:
+      consumes:
+      - application/json
+      description: Get total counts of disabilities
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.Response'
+      summary: Get Disability Totals
+      tags:
+      - reports
+  /reports/disability-totals/{neighborhood}:
+    get:
+      consumes:
+      - application/json
+      description: Get total counts of disabilities by neighborhood
+      parameters:
+      - description: Neighborhood
+        in: path
+        name: neighborhood
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.Response'
+      summary: Get Disability Totals By Neighborhood
+      tags:
+      - reports
 swagger: "2.0"
